# mat_pow

./: .gitignore  CMakeLists.txt  Makefile  README.md  file_sequential  mat_pow_sequential.c  pthread_mat_pow  sequential
include/arm/: pthread_mat_pow.h
include/epiphany/: e_mat_pow.h  mat_pow.ldf
src/: CMakeLists.txt  old_Makefile
src/epiphany/: e_mat_pow.c  e_mat_split_pow.c  main.c  main_split.c
src/pthread/: pthread_mat_pow.c
src/sequential/: file_sequential_mat_pow.c  sequential_mat_pow.c
src/softcache/: CMakeLists.txt
tests/: test1.txt  test4.txt  test5.txt
